# telegram-django

./: .gitignore  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml  deploy.yml
connect/telegram_bot/: bot.py  constants.py  telegram_conversation.py
connect/telegram_bot/decorators/: chat_context.py  log_args.py
django_telegram/: __init__.py  apps.py  configurator.py
django_telegram/bot/: apps.py  bot_runner.py  commands.py  constants.py  middleware.py  telegram_conversation.py
django_telegram/bot/errors/: saved_filter_not_found.py
django_telegram/bot/management/commands/: start_bot.py
django_telegram/bot/renderers/: qs2md.py
django_telegram/management/commands/: start_bot.py
tests/: test_configurator.py
tests/bot/: __init__.py  conftest.py  test_bot_runner.py  test_commands.py  test_middleware.py  test_telegram_conversation.py
tests/bot/renderers/: test_qs2md.py
tests/telegram_bot/: __init__.py  conftest.py  test_bot.py  test_telegram_conversation.py
tests/telegram_bot/renderers/: test_qs2md.py
