[tool.poetry]
name = "telegram-django"
version = "1.0.3"
description = "Django Telegram Bot"
authors = ["CloudBlue LLC"]
license = "Apache-2.0"
packages = [
    { include = "django_telegram" },
]
readme = "./README.md"
homepage = "https://connect.cloudblue.com"
repository = "https://github.com/cloudblue/telegram-django"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
]

keywords = [
    "telegram",
    "connect",
    "utility",
    "cloudblue",
    "bot",
    "django",
]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "13.*"
django = ">=2.2,<4"

[tool.poetry.dev-dependencies]
ipython = "8.*"
pytest = "7.*"
pytest-cov = "3.*"
pytest-mock = "3.*"
coverage = {extras = ["toml"], version = "6.*"}
flake8 = "4.*"
flake8-broken-line = "0.*"
flake8-bugbear = "22.*"
flake8-cognitive-complexity = "0.*"
flake8-commas = "2.*"
flake8-comprehensions = "3.*"
flake8-debugger = "4.*"
flake8-eradicate = "1.*"
flake8-future-import = "0.*"
flake8-import-order = "0.*"
flake8-string-format = "0.*"
fs = "2.*"
django-fake-database-backends = "0.*"
django-fake-model = "0.*"
django-mock-queries = "2.*"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
log_cli = true
addopts = "--cov=django_telegram --cov-report=term-missing:skip-covered --cov-report=html --cov-report=xml"
filterwarnings = "ignore::UserWarning"

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = [
]

exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "noqa",
]